--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.6.3",
+    "lightgallery": "^2.8.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "us": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
